--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/musical
-spring.datasource.username=nikitanikita
-spring.datasource.password=123
+spring.datasource.username=admin
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 upload.path=${user.dir}/uploads
 spring.servlet.multipart.max-file-size=100MB
@@ -10,3 +10,5 @@ spring.session.jdbc.table-name=SPRING_SESSION
 
 
 spring.devtools.restart.enabled=true
+spring.devtools.restart.exclude=static/**,public/**
+
