--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.servlet.multipart.max-request-size=100MB
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
+spring.thymeleaf.cache=false
 
 spring.devtools.restart.enabled=true
 spring.devtools.restart.exclude=static/**,public/**
