--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.thymeleaf.cache=false
 
 spring.devtools.restart.enabled=true
 spring.devtools.restart.exclude=static/**,public/**
+
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.web.resources.static-locations=file:src/main/resources/static/
+spring.web.resources.cache.period=0
