--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,28 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/musical_2_0
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/j05100678_musicspring
+spring.datasource.username=j05100678_nikita
+spring.datasource.password=musicspring
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/musicspring
+#spring.datasource.username=nikitaadmin
+#spring.datasource.password=nikitaadmin
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=none
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/musical_2_0
+#spring.datasource.username=admin
+#spring.datasource.password=admin
+#spring.jpa.hibernate.ddl-auto=none
 
 
 upload.path=${user.dir}/uploads
+
+
+#yandex.cloud.s3.bucket-name=java-music-spring
+#yandex.cloud.s3.access-key=ajeknuheu5cmdoficds1
+#yandex.cloud.s3.secret-key=AQVN1L-i7xWWbh8mN4GHwY_IAT3cHu0OGVIVeOYA
+#yandex.cloud.s3.endpoint=storage.yandexcloud.net
+#yandex.cloud.s3.region=ru-central1-c
+
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 spring.session.jdbc.initialize-schema=always
