--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/j05100678_musicspring
-spring.datasource.username=j05100678_nikita
-spring.datasource.password=musicspring
-spring.jpa.hibernate.ddl-auto=update
-
-#spring.datasource.url=jdbc:postgresql://localhost:5432/musicspring
-#spring.datasource.username=nikitaadmin
-#spring.datasource.password=nikitaadmin
+#spring.datasource.url=jdbc:mysql://localhost:3306/j05100678_musicspring
+#spring.datasource.username=j05100678_nikita
+#spring.datasource.password=musicspring
 #spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/musicspring
+spring.datasource.username=nikitaadmin
+spring.datasource.password=nikitaadmin
+spring.jpa.hibernate.ddl-auto=update
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/musical_2_0
 #spring.datasource.username=admin
